@@ -29,5 +29,5 @@ requires:
   namespace::clean: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.003
+version: 0.004
 x_authority: GHENRY
