@@ -2,7 +2,7 @@ package Message::Passing::Collectd;
 use strict;
 use warnings;
 
-our $VERSION = '0.003';
+our $VERSION = '0.004';
 
 1;
 
