@@ -1,3 +1,6 @@
+  - Change all config keys to lower case, as puppet doesn't
+    seem to like upper case keys in hashes.
+
 0.003
   - Fix data to be munged into a saner form so that we get the data
     type information, the hostname and other metadata.
